--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "beberlei/doctrineextensions": "^1.0",
+        "gedmo/doctrine-extensions": "^2.4",
+        "laravel-doctrine/extensions": "1.0.*",
+        "laravel-doctrine/orm": "1.4.*",
         "laravel/lumen-framework": "5.8.*"
     },
     "require-dev": {
